// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 9A Checkpoint golden builders > matches ten fixed question IDs, seeded shuffle, areas, Quill HTML, average and ranks > Checkpoint explicit-score payload with seeded shuffle 1`] = `
{
  "classId": "class-1",
  "classSiteId": "site-1",
  "courseProcessId": "process-1",
  "rank": "B",
  "sessionNumber": 5,
  "slotId": "slot-5",
  "slotType": "CheckPoint",
  "studentComment": {
    "byAreas": [
      {
        "commentAreaId": "665e7d33181e0e47f6c63768",
        "content": "- Học viên chủ động liên hệ giáo viên tìm thêm nguồn/ sách để ôn tập và học kiến thức mới tại nhà ngoài những tài liệu đã được cung cấp mà không cần yêu cầu từ giáo viên",
        "courseProcessCheckpointEvaluationId": "66c866a56ae1a9fab6399329",
        "courseProcessCheckpointEvaluationTitle": "KIẾN THỨC",
        "grade": 5,
        "type": "RATE",
      },
      {
        "commentAreaId": "668d69d8e71f90e7630ce16c",
        "content": "- Ngoài việc nắm vững các kiến thức được giảng dạy, học viên còn có sự chủ động, đặt câu hỏi mở rộng trực tiếp tại lớp từ những kiến thức vừa được cung cấp",
        "courseProcessCheckpointEvaluationId": "66c866a56ae1a9fab6399329",
        "courseProcessCheckpointEvaluationTitle": "KIẾN THỨC",
        "grade": 5,
        "type": "RATE",
      },
      {
        "commentAreaId": "668e0f48e71f90e7630d2db6",
        "content": "- Học viên phản biện và phân tích các giải pháp một cách sâu rộng, biết thử đi thử lại nhiều lần đến khi ra kết quả từ đó Học viên có thể tổng quát cho nhiều vấn đề tương tự sau này
- Học viên đưa sản phẩm cá nhân go live và có tiếp nhận người dùng thật",
        "courseProcessCheckpointEvaluationId": "66c866a56ae1a9fab639932a",
        "courseProcessCheckpointEvaluationTitle": "KỸ NĂNG",
        "grade": 5,
        "type": "RATE",
      },
      {
        "commentAreaId": "668e2e7de71f90e7630d4316",
        "content": "- Học viên trình bày ý kiến rõ ràng, chủ động hỏi khi gặp vấn đề, thuyết trình trước lớp mạch lạc, rõ ràng
- Học viên nhìn nhận được những ưu - nhược điểm của bản thân sau khi nhận đánh giá từ giáo viên, bạn bè",
        "courseProcessCheckpointEvaluationId": "66c866a56ae1a9fab639932a",
        "courseProcessCheckpointEvaluationTitle": "KỸ NĂNG",
        "grade": 5,
        "type": "RATE",
      },
      {
        "commentAreaId": "668e2ce1e71f90e7630d406f",
        "content": "- Tốc độ sử dụng chuột/bàn phím rất thành thạo, có thể sử dụng gõ phím bằng 2 tay không cần nhìn phím.
- Học viên tận dụng tối ưu các phần mềm máy tính, sử dụng các công cụ hỗ trợ xây dựng sơ đồ tư duy, công cụ quản lý tiến độ dự án, công cụ xây dựng sơ đồ thuật toán",
        "courseProcessCheckpointEvaluationId": "66c866a56ae1a9fab639932a",
        "courseProcessCheckpointEvaluationTitle": "KỸ NĂNG",
        "grade": 5,
        "type": "RATE",
      },
      {
        "commentAreaId": "668d6a25e71f90e7630ce187",
        "content": "- Học viên thành thạo trong việc sử dụng ngôn ngữ lập trình
- Học viên có thể tự xây dựng mô hình/sơ đồ tư duy tuần tự các bước lập trình cho dự án cá nhân của mình mà không cần sự hỗ trợ từ Giáo viên",
        "courseProcessCheckpointEvaluationId": "66c866a56ae1a9fab639932a",
        "courseProcessCheckpointEvaluationTitle": "KỸ NĂNG",
        "grade": 5,
        "type": "RATE",
      },
      {
        "commentAreaId": "668d6a69e71f90e7630ce198",
        "content": "- Học viên chủ động trong việc phát hiện ra những ý tưởng sáng tạo cho các tính năng của sản phẩm dựa trên những kiến thức vừa được học và đặt câu hỏi với Giáo viên.
- Học viên tự mình thiết kế trò chơi, câu chuyện hoặc dự án hoàn toàn mới, có khả năng thu hút sự chú ý và hứng thú của người khác, hoặc tạo ra một trào lưu trong cộng đồng",
        "courseProcessCheckpointEvaluationId": "66c866a56ae1a9fab639932a",
        "courseProcessCheckpointEvaluationTitle": "KỸ NĂNG",
        "grade": 5,
        "type": "RATE",
      },
      {
        "commentAreaId": "668e2eaee71f90e7630d434f",
        "content": "- Học viên tập trung lắng nghe bài giảng, tự giác học tập, mentor hầu như không phải nhắc nhở con, hiệu quả buổi học cao
- Học viên tuân thủ tuyệt đối các quy tắc trong lớp học, luôn có mặt đúng giờ, lễ phép khi giao tiếp với giáo viên",
        "courseProcessCheckpointEvaluationId": "66c866a56ae1a9fab639932b",
        "courseProcessCheckpointEvaluationTitle": "THÁI ĐỘ",
        "grade": 5,
        "type": "RATE",
      },
      {
        "commentAreaId": "668e2f5be71f90e7630d44c1",
        "content": "- Học viên chủ động tìm kiếm thêm các bài tập, dự án để luyện tập và đặt các câu hỏi luyện tập với giáo viên",
        "courseProcessCheckpointEvaluationId": "66c866a56ae1a9fab639932b",
        "courseProcessCheckpointEvaluationTitle": "THÁI ĐỘ",
        "grade": 5,
        "type": "RATE",
      },
      {
        "commentAreaId": "670777c055bde44038509a1b",
        "content": "Chúng tôi rất cảm ơn Quý phụ huynh đã tin tưởng và lựa chọn đăng ký học cho con tại Học viện công nghệ MindX. Để nâng cao chất lượng đào tạo và dịch vụ, xin Quý phụ huynh dành chút thời gian để hoàn thành khảo sát dưới đây.
https://forms.office.com/r/aD9aPGAw2A",
        "grade": 0,
        "type": "RATE",
      },
      {
        "commentAreaId": "67b54307f79c7bc326e017ff",
        "content": "<p>Nhận xét checkpoint</p>",
        "type": "CONTENT",
      },
      {
        "checkpoint": {
          "checkpointQuestions": [
            {
              "id": "668e2f99e71f90e7630d4594",
              "result": true,
              "score": 0.5,
              "title": "1. ",
            },
            {
              "id": "668e2f99e71f90e7630d4595",
              "result": true,
              "score": 0.5,
              "title": "2. ",
            },
            {
              "id": "668e2f99e71f90e7630d4596",
              "result": true,
              "score": 0.5,
              "title": "3. ",
            },
            {
              "id": "668e2f99e71f90e7630d4597",
              "result": true,
              "score": 0.5,
              "title": "4. ",
            },
            {
              "id": "668e2f99e71f90e7630d4598",
              "result": true,
              "score": 0.5,
              "title": "5. ",
            },
            {
              "id": "668e2f99e71f90e7630d4599",
              "result": true,
              "score": 0.5,
              "title": "6. ",
            },
            {
              "id": "668e2f99e71f90e7630d459a",
              "result": true,
              "score": 0.5,
              "title": "7. ",
            },
            {
              "id": "668e2f99e71f90e7630d459b",
              "result": true,
              "score": 0.5,
              "title": "8. ",
            },
            {
              "id": "668e2f99e71f90e7630d459c",
              "result": false,
              "score": 0,
              "title": "9. ",
            },
            {
              "id": "668e2f99e71f90e7630d459d",
              "result": true,
              "score": 0.5,
              "title": "10. ",
            },
          ],
          "checkpointScore": 4.5,
          "practiceScore": 4,
        },
        "commentAreaId": "668e2f99e71f90e7630d4593",
        "content": "Điểm thực hành: 4
    <p>Điểm trắc nghiệm: 4.5</p>",
        "type": "CHECKPOINT",
      },
    ],
    "content": "<div style="list-style-type:circle"><p><strong style="color:rgb(0, 0, 0)">Điểm lý thuyết</strong><span style="color:rgb(0, 0, 0)">: </span><strong style="color:rgb(226, 80, 65)">4.5 điểm</strong></p><ul><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)">1. : 0.5 điểm</span></li><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)">2. : 0.5 điểm</span></li><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)">3. : 0.5 điểm</span></li><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)">4. : 0.5 điểm</span></li><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)">5. : 0.5 điểm</span></li><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)">6. : 0.5 điểm</span></li><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)">7. : 0.5 điểm</span></li><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)">8. : 0.5 điểm</span></li><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)">9. : 0 điểm</span></li><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)">10. : 0.5 điểm</span></li></ul><p><strong style="color:rgb(0, 0, 0)">Điểm thực hành</strong><span style="color:rgb(0, 0, 0)">: </span><strong style="color:rgb(226, 80, 65)">4 điểm</strong></p></div>",
    "studentAttendanceId": "attendance-1",
    "studentId": "student-1",
  },
  "totalScore": 4.3,
}
`;

exports[`Phase 9A Checkpoint golden builders > uses score-only fallback comment and auto scores when both inputs are blank > Checkpoint both-blank auto-score payload 1`] = `
{
  "classId": "class-1",
  "classSiteId": "site-1",
  "courseProcessId": "process-1",
  "rank": "B",
  "sessionNumber": 5,
  "slotId": "slot-5",
  "slotType": "CheckPoint",
  "studentComment": {
    "byAreas": [
      {
        "commentAreaId": "665e7d33181e0e47f6c63768",
        "content": "- Học viên chủ động liên hệ giáo viên tìm thêm nguồn/ sách để ôn tập và học kiến thức mới tại nhà ngoài những tài liệu đã được cung cấp mà không cần yêu cầu từ giáo viên",
        "courseProcessCheckpointEvaluationId": "66c866a56ae1a9fab6399329",
        "courseProcessCheckpointEvaluationTitle": "KIẾN THỨC",
        "grade": 5,
        "type": "RATE",
      },
      {
        "commentAreaId": "668d69d8e71f90e7630ce16c",
        "content": "- Ngoài việc nắm vững các kiến thức được giảng dạy, học viên còn có sự chủ động, đặt câu hỏi mở rộng trực tiếp tại lớp từ những kiến thức vừa được cung cấp",
        "courseProcessCheckpointEvaluationId": "66c866a56ae1a9fab6399329",
        "courseProcessCheckpointEvaluationTitle": "KIẾN THỨC",
        "grade": 5,
        "type": "RATE",
      },
      {
        "commentAreaId": "668e0f48e71f90e7630d2db6",
        "content": "- Học viên phản biện và phân tích các giải pháp một cách sâu rộng, biết thử đi thử lại nhiều lần đến khi ra kết quả từ đó Học viên có thể tổng quát cho nhiều vấn đề tương tự sau này
- Học viên đưa sản phẩm cá nhân go live và có tiếp nhận người dùng thật",
        "courseProcessCheckpointEvaluationId": "66c866a56ae1a9fab639932a",
        "courseProcessCheckpointEvaluationTitle": "KỸ NĂNG",
        "grade": 5,
        "type": "RATE",
      },
      {
        "commentAreaId": "668e2e7de71f90e7630d4316",
        "content": "- Học viên trình bày ý kiến rõ ràng, chủ động hỏi khi gặp vấn đề, thuyết trình trước lớp mạch lạc, rõ ràng
- Học viên nhìn nhận được những ưu - nhược điểm của bản thân sau khi nhận đánh giá từ giáo viên, bạn bè",
        "courseProcessCheckpointEvaluationId": "66c866a56ae1a9fab639932a",
        "courseProcessCheckpointEvaluationTitle": "KỸ NĂNG",
        "grade": 5,
        "type": "RATE",
      },
      {
        "commentAreaId": "668e2ce1e71f90e7630d406f",
        "content": "- Tốc độ sử dụng chuột/bàn phím rất thành thạo, có thể sử dụng gõ phím bằng 2 tay không cần nhìn phím.
- Học viên tận dụng tối ưu các phần mềm máy tính, sử dụng các công cụ hỗ trợ xây dựng sơ đồ tư duy, công cụ quản lý tiến độ dự án, công cụ xây dựng sơ đồ thuật toán",
        "courseProcessCheckpointEvaluationId": "66c866a56ae1a9fab639932a",
        "courseProcessCheckpointEvaluationTitle": "KỸ NĂNG",
        "grade": 5,
        "type": "RATE",
      },
      {
        "commentAreaId": "668d6a25e71f90e7630ce187",
        "content": "- Học viên thành thạo trong việc sử dụng ngôn ngữ lập trình
- Học viên có thể tự xây dựng mô hình/sơ đồ tư duy tuần tự các bước lập trình cho dự án cá nhân của mình mà không cần sự hỗ trợ từ Giáo viên",
        "courseProcessCheckpointEvaluationId": "66c866a56ae1a9fab639932a",
        "courseProcessCheckpointEvaluationTitle": "KỸ NĂNG",
        "grade": 5,
        "type": "RATE",
      },
      {
        "commentAreaId": "668d6a69e71f90e7630ce198",
        "content": "- Học viên chủ động trong việc phát hiện ra những ý tưởng sáng tạo cho các tính năng của sản phẩm dựa trên những kiến thức vừa được học và đặt câu hỏi với Giáo viên.
- Học viên tự mình thiết kế trò chơi, câu chuyện hoặc dự án hoàn toàn mới, có khả năng thu hút sự chú ý và hứng thú của người khác, hoặc tạo ra một trào lưu trong cộng đồng",
        "courseProcessCheckpointEvaluationId": "66c866a56ae1a9fab639932a",
        "courseProcessCheckpointEvaluationTitle": "KỸ NĂNG",
        "grade": 5,
        "type": "RATE",
      },
      {
        "commentAreaId": "668e2eaee71f90e7630d434f",
        "content": "- Học viên tập trung lắng nghe bài giảng, tự giác học tập, mentor hầu như không phải nhắc nhở con, hiệu quả buổi học cao
- Học viên tuân thủ tuyệt đối các quy tắc trong lớp học, luôn có mặt đúng giờ, lễ phép khi giao tiếp với giáo viên",
        "courseProcessCheckpointEvaluationId": "66c866a56ae1a9fab639932b",
        "courseProcessCheckpointEvaluationTitle": "THÁI ĐỘ",
        "grade": 5,
        "type": "RATE",
      },
      {
        "commentAreaId": "668e2f5be71f90e7630d44c1",
        "content": "- Học viên chủ động tìm kiếm thêm các bài tập, dự án để luyện tập và đặt các câu hỏi luyện tập với giáo viên",
        "courseProcessCheckpointEvaluationId": "66c866a56ae1a9fab639932b",
        "courseProcessCheckpointEvaluationTitle": "THÁI ĐỘ",
        "grade": 5,
        "type": "RATE",
      },
      {
        "commentAreaId": "670777c055bde44038509a1b",
        "content": "Chúng tôi rất cảm ơn Quý phụ huynh đã tin tưởng và lựa chọn đăng ký học cho con tại Học viện công nghệ MindX. Để nâng cao chất lượng đào tạo và dịch vụ, xin Quý phụ huynh dành chút thời gian để hoàn thành khảo sát dưới đây.
https://forms.office.com/r/aD9aPGAw2A",
        "grade": 0,
        "type": "RATE",
      },
      {
        "commentAreaId": "67b54307f79c7bc326e017ff",
        "content": "<p>Học sinh hoàn thành bài kiểm tra checkpoint.</p>",
        "type": "CONTENT",
      },
      {
        "checkpoint": {
          "checkpointQuestions": [
            {
              "id": "668e2f99e71f90e7630d4594",
              "result": true,
              "score": 0.5,
              "title": "1. ",
            },
            {
              "id": "668e2f99e71f90e7630d4595",
              "result": true,
              "score": 0.5,
              "title": "2. ",
            },
            {
              "id": "668e2f99e71f90e7630d4596",
              "result": true,
              "score": 0.5,
              "title": "3. ",
            },
            {
              "id": "668e2f99e71f90e7630d4597",
              "result": true,
              "score": 0.5,
              "title": "4. ",
            },
            {
              "id": "668e2f99e71f90e7630d4598",
              "result": true,
              "score": 0.5,
              "title": "5. ",
            },
            {
              "id": "668e2f99e71f90e7630d4599",
              "result": true,
              "score": 0.5,
              "title": "6. ",
            },
            {
              "id": "668e2f99e71f90e7630d459a",
              "result": true,
              "score": 0.5,
              "title": "7. ",
            },
            {
              "id": "668e2f99e71f90e7630d459b",
              "result": false,
              "score": 0,
              "title": "8. ",
            },
            {
              "id": "668e2f99e71f90e7630d459c",
              "result": false,
              "score": 0,
              "title": "9. ",
            },
            {
              "id": "668e2f99e71f90e7630d459d",
              "result": true,
              "score": 0.5,
              "title": "10. ",
            },
          ],
          "checkpointScore": 4,
          "practiceScore": 4,
        },
        "commentAreaId": "668e2f99e71f90e7630d4593",
        "content": "Điểm thực hành: 4
    <p>Điểm trắc nghiệm: 4</p>",
        "type": "CHECKPOINT",
      },
    ],
    "content": "<div style="list-style-type:circle"><p><strong style="color:rgb(0, 0, 0)">Điểm lý thuyết</strong><span style="color:rgb(0, 0, 0)">: </span><strong style="color:rgb(226, 80, 65)">4 điểm</strong></p><ul><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)">1. : 0.5 điểm</span></li><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)">2. : 0.5 điểm</span></li><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)">3. : 0.5 điểm</span></li><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)">4. : 0.5 điểm</span></li><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)">5. : 0.5 điểm</span></li><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)">6. : 0.5 điểm</span></li><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)">7. : 0.5 điểm</span></li><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)">8. : 0 điểm</span></li><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)">9. : 0 điểm</span></li><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)">10. : 0.5 điểm</span></li></ul><p><strong style="color:rgb(0, 0, 0)">Điểm thực hành</strong><span style="color:rgb(0, 0, 0)">: </span><strong style="color:rgb(226, 80, 65)">4 điểm</strong></p></div>",
    "studentAttendanceId": "attendance-1",
    "studentId": "student-1",
  },
  "totalScore": 4,
}
`;

exports[`Phase 9A Demo golden builders > matches dynamic custom-score, RATE/DEMO order, HTML, score weighting and rank semantics > dynamic Demo payload with RATE areas and seeded custom scores 1`] = `
{
  "classId": "class-1",
  "classSiteId": "site-1",
  "courseProcessId": "process-1",
  "rank": "A",
  "sessionNumber": 14,
  "slotId": "slot-14",
  "slotType": "Final",
  "studentComment": {
    "byAreas": [
      {
        "commentAreaId": "dynamic-rate",
        "content": "- Mẫu năng lực động",
        "courseProcessFinalEvaluationId": "final-skills",
        "courseProcessFinalEvaluationTitle": "KỸ NĂNG",
        "demoQuestions": [],
        "grade": 5,
        "type": "RATE",
      },
      {
        "commentAreaId": "dynamic-area",
        "content": "<div>
                <p>
                  <strong>Demo động:</strong>
                  <strong style='color: rgb(226, 80, 65)'> 4.25 điểm</strong>
                </p>
                <ul>
                  <li>Tiêu chí &lt;một&gt;: 2.5 điểm</li><li>Tiêu chí hai: 1.75 điểm</li>
                </ul>
            </div>",
        "courseProcessDemoId": "dynamic-demo",
        "demoQuestions": [
          {
            "courseProcessDemoDetailId": "dynamic-q1",
            "maxScore": 3,
            "result": false,
            "score": 2.5,
            "title": "Tiêu chí <một>",
          },
          {
            "courseProcessDemoDetailId": "dynamic-q2",
            "maxScore": 2,
            "result": false,
            "score": 1.75,
            "title": "Tiêu chí hai",
          },
        ],
        "grade": 0,
        "type": "DEMO",
      },
    ],
    "content": "<div style="list-style-type:circle"><p><strong style="color:rgb(0, 0, 0)">Điểm Demo</strong><span style="color:rgb(0, 0, 0)">: </span><strong style="color:rgb(226, 80, 65)">4.25 điểm</strong></p><ul><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)"><div>
                <p>
                  <strong>Demo động:</strong>
                  <strong style='color: rgb(226, 80, 65)'> 4.25 điểm</strong>
                </p>
                <ul>
                  <li>Tiêu chí &lt;một&gt;: 2.5 điểm</li><li>Tiêu chí hai: 1.75 điểm</li>
                </ul>
            </div></span></li></ul><p><strong style="color:rgb(0, 0, 0)">​Điểm năng lực: </strong><strong style="color:rgb(226, 80, 65)">5 điểm</strong></p><ul><li data-list="bullet" style="list-style-type:circle"><span class="ql-ui"></span><strong style="color:rgb(226, 80, 65)">​</strong><strong style="color:rgb(0, 0, 0)">KỸ NĂNG: </strong><ul><span style="color:rgb(0, 0, 0)"><li data-list='bullet' class='ql-indent-2'><span class='ql-ui'></span>Mẫu năng lực động</li></span></ul></li></ul></div>",
    "studentAttendanceId": "attendance-1",
    "studentId": "student-1",
  },
  "totalScore": 4.6,
}
`;

exports[`Phase 9A Demo golden builders > omits RATE areas when autoRate is false and applies exact Demo ranks > Hackathon fallback Demo payload with autoRate false 1`] = `
{
  "classId": "class-1",
  "classSiteId": "site-1",
  "courseProcessId": "process-1",
  "rank": "B",
  "sessionNumber": 14,
  "slotId": "slot-14",
  "slotType": "Final",
  "studentComment": {
    "byAreas": [
      {
        "commentAreaId": "66c44cf76ae1a9fab631679d",
        "content": "<div>
                <p>
                  <strong>Điểm bài Hackathon:</strong>
                  <strong style='color: rgb(226, 80, 65)'> 4 điểm</strong>
                </p>
                <ul>
                  <li>Điểm Hackathon: 4 điểm</li>
                </ul>
            </div>",
        "courseProcessDemoId": "66c86cff6ae1a9fab639aa24",
        "demoQuestions": [
          {
            "courseProcessDemoDetailId": "66c44cf76ae1a9fab631679c",
            "maxScore": 5,
            "result": false,
            "score": 4,
            "title": "Điểm Hackathon",
          },
        ],
        "grade": 0,
        "type": "DEMO",
      },
    ],
    "content": "<div style="list-style-type:circle"><p><strong style="color:rgb(0, 0, 0)">Điểm Demo</strong><span style="color:rgb(0, 0, 0)">: </span><strong style="color:rgb(226, 80, 65)">4 điểm</strong></p><ul><li data-list="bullet"><span class="ql-ui"></span><span style="color:rgb(0, 0, 0)"><div>
                <p>
                  <strong>Điểm bài Hackathon:</strong>
                  <strong style='color: rgb(226, 80, 65)'> 4 điểm</strong>
                </p>
                <ul>
                  <li>Điểm Hackathon: 4 điểm</li>
                </ul>
            </div></span></li></ul></div>",
    "studentAttendanceId": "attendance-1",
    "studentId": "student-1",
  },
  "totalScore": 4,
}
`;
